[gd_scene load_steps=10 format=3 uid="uid://06h0wjoq6kse"]

[ext_resource type="Texture2D" uid="uid://co306qjebf727" path="res://art/pipe_down.png" id="1_3ahhd"]
[ext_resource type="Script" uid="uid://lbdbl5bff7qx" path="res://scenes/pipes.gd" id="1_prsvi"]
[ext_resource type="Texture2D" uid="uid://3ymeamtv66u0" path="res://art/pipe_up.png" id="2_prsvi"]
[ext_resource type="Shader" uid="uid://b8nikbtlwuipp" path="res://shaders/no_jitter.gdshader" id="2_v53nb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c66uf"]
shader = ExtResource("2_v53nb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v53nb"]
shader = ExtResource("2_v53nb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v53nb"]
size = Vector2(26, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c66uf"]
size = Vector2(26, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kufs7"]
size = Vector2(20, 48)

[node name="Pipes" type="StaticBody2D" groups=["pipes"]]
z_index = 1
collision_layer = 2
collision_mask = 0
script = ExtResource("1_prsvi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
material = SubResource("ShaderMaterial_c66uf")
position = Vector2(0, -83.5)
texture = ExtResource("1_3ahhd")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 2
material = SubResource("ShaderMaterial_v53nb")
position = Vector2(0, 95)
texture = ExtResource("2_prsvi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -83.5)
shape = SubResource("RectangleShape2D_v53nb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 95)
shape = SubResource("RectangleShape2D_c66uf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.19209e-07, -26)
scale = Vector2(1.3, 1)

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="ScoreCollision" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_kufs7")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
